--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,7 @@ hs_err_pid*
 
 ### Maven ###
 target/
-pom.xml.tag
+
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
@@ -99,3 +99,4 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/java,maven,eclipse
+/GADUDA_ver01/
