--- a/GADUDA_ver01/src/main/webapp/WEB-INF/web.xml
+++ b/GADUDA_ver01/src/main/webapp/WEB-INF/web.xml
@@ -30,4 +30,10 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error</location>
+	</error-page>
+
+
 </web-app>
