--- a/GADUDA_ver01/src/main/webapp/WEB-INF/web.xml
+++ b/GADUDA_ver01/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,19 @@
 		<error-code>500</error-code>
 		<location>/error</location>
 	</error-page>
+	
+	<filter>
+      <filter-name>encodingFilter</filter-name>
+      <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+      <init-param>
+         <param-name>encoding</param-name>
+         <param-value>utf-8</param-value>
+      </init-param>
+   </filter>
 
+   <filter-mapping>
+      <filter-name>encodingFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+   </filter-mapping>
 
 </web-app>
