--- a/GADUDA_ver01/src/main/webapp/WEB-INF/web.xml
+++ b/GADUDA_ver01/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,17 @@
 		<location>/error</location>
 	</error-page>
 	
+		
+	<error-page>
+		<error-code>404</error-code>
+		<location>/404error</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>400</error-code>
+		<location>/404error</location>
+	</error-page>
+	
 	<filter>
       <filter-name>encodingFilter</filter-name>
       <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
